backend/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: backend-service
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 571600829776.dkr.ecr.ap-south-1.amazonaws.com/team-c/backend:1.0
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
