backend/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
    #alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
